--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SimplecodecastsSaas</title>
+  <title>Dev Match</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -9,14 +9,17 @@
 <body>
   <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
     <div class="container">
-      <div class="navbar-header">
+      <div class="navbar-header ">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav-collapse">
           <span class="sr-only"> Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-          <%= link_to 'SaaS', root_path, class:'navbar-brand' %>
+          <%= link_to root_path, class: "navbar-brand" do %>
+        <i class="fa fa-users "></i>
+          Dev Match
+          <% end %>
           
       </div>
       
@@ -24,14 +27,11 @@
         <ul class="nav navbar-nav navbar-right">
           <li><%= link_to "About", about_path %></li>
         </ul>
-        
       </div>
     </div>
   </nav>
-
 <div class="container">
   <%= yield %>
 </div>
-
 </body>
 </html>
